# url-shortener

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  SCALABILITY.md  config.py  pyproject.toml  pytest.ini  requirements.txt  test_main.http
docker/: Dockerfile  docker-compose.yml
src/: .env.example  logger.py  main.py  migrate.py  routers.py
src/config/: conf.py
src/database/: core.py
src/database/revisions/: alembic.ini  env.py
src/database/revisions/versions/: 1755184061_.py  1755249632_add_visits_count_field.py
src/link/: models.py  repo.py  service.py
src/link/api/v1/: routers.py  schemas.py
test/: load_test.py
tests/: README.md  __init__.py  conftest.py  load_test.py  test_models.py  test_repo.py  test_service.py
